--- a/client/.gitignore
+++ b/client/.gitignore
@@ -9,7 +9,8 @@ lerna-debug.log*
 
 node_modules/
 client/node_modules/
-server/node_modules/
+backend/node_modules/
+backend/.env
 /build
 dist
 dist-ssr
